unpackaged/main/default/objects/Questionnaire__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>