unpackaged/main/default/objects/Questionnaire__c/recordTypes/Instance.recordType-meta.xml
<RecordType>
    <fullName>Instance</fullName>
    <active>true</active>
    <description>Represents a deployed, active questionnaire instance</description>
    <label>Instance</label>
</RecordType>