unpackaged/main/default/objects/Questionnaire__c/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <description>Used to build templates</description>
    <label>Template</label>
</RecordType>