unpackaged/main/default/objects/Questionnaire__c/validationRules/Case_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Type_Required</fullName>
    <active>true</active>
    <description>Requires Case Type when Record Type is not Template</description>
    <errorConditionFormula>ISBLANK(Case_Type__c) &amp;&amp; RecordType.Name != &#39;Template&#39;</errorConditionFormula>
    <errorDisplayField>Case_Type__c</errorDisplayField>
    <errorMessage>You must have a Case Type</errorMessage>
</ValidationRule>