unpackaged/main/default/objects/Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>isActive__c</columns>
    <columns>isAvailable__c</columns>
    <columns>External_Access__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>